--- a/weights.html
+++ b/weights.html
@@ -80,12 +80,12 @@
             <li>Slowly lower the barbell above your chest with your arms slightly angled outward.</li>
             <li>Then push up and away from your chest. Completing one rep.</li>
         </ol>
-        <p><strong>Notes:</strong> <i>It's advised to start with lighter weights first. If the exercise becomes too easy, then
+        <p><strong>Notes:</strong> <i>It's advised to start with lighter weights first. If the exercise becomes too
+                easy, then
                 add a few weights for difficulty.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/1bench-press.jpg" alt="Image of a bench press exercise">
-    </div>
+    <img src="./images/1bench-press.jpg" alt="Image of a bench press exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Bent-Over Rows -->
@@ -103,9 +103,8 @@
                 pulling the barbell.</i></p>
 
     </div>
-    <div class="img">
-        <img src="./images/2bent-over-rows.jpg" alt="Image of bent-over rows exercise">
-    </div>
+    <img src="./images/2bent-over-rows.jpg" alt="Image of bent-over rows exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Dumbbell Lateral Raises -->
@@ -122,9 +121,8 @@
         <p><strong>Notes:</strong> <i>Refrain your body from bobbing up and down to make the exercise easier. You want
                 your shoulders to be doing the work, not the knees.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/3dumbbell-lateral-raises.png" alt="Image of a dumbbell lateral raise exercise">
-    </div>
+    <img src="./images/3dumbbell-lateral-raises.png" alt="Image of a dumbbell lateral raise exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Dumbbell Curls -->
@@ -140,9 +138,8 @@
         </ol>
         <p><strong>Notes:</strong> <i>Don't lock your arms when bringing the dumbbells back down by your side.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/4dumbbell-curls.jpg" alt="Image of a dumbell curls exercise">
-    </div>
+    <img src="./images/4dumbbell-curls.jpg" alt="Image of a dumbell curls exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Lower Body Weights -->
@@ -200,9 +197,8 @@
         <p><strong>Notes:</strong> <i>Keeping your back straight is very important, as you don't want your lower back to
                 be doing all the lifting.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/5deadlifts.jpg" alt="Image of a deadlift exercise">
-    </div>
+    <img src="./images/5deadlifts.jpg" alt="Image of a deadlift exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Barbell Hip Thrusts -->
@@ -220,9 +216,8 @@
         <p><strong>Notes:</strong> <i>Your shoulder blades should be resting on the bench and not your whole back.</i>
         </p>
     </div>
-    <div class="img">
-        <img src="./images/6barbell-hip-thrusts.jpg" alt="Image of a barbell hip thrust exercise">
-    </div>
+    <img src="./images/6barbell-hip-thrusts.jpg" alt="Image of a barbell hip thrust exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Bulgarian Split Squats -->
@@ -240,9 +235,8 @@
         <p><strong>Notes:</strong> <i>Rely the leg that's planted on the floor to do all the pushing and use your foot
                 on the bench only for balance.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/7bulgarian-split-squats.jpg" alt="Image of a bulgarian split squat exercise">
-    </div>
+    <img src="./images/7bulgarian-split-squats.jpg" alt="Image of a bulgarian split squat exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Seated Dumbbell Calf Raises -->
@@ -262,9 +256,8 @@
         <p><strong>Notes:</strong> <i>You want to extend your foot as much as possible to get the most for your
                 calves.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/8seated-dumbbell-calf-raises.jpg" alt="Image of a seated dumbbell calf raises exercise">
-    </div>
+    <img src="./images/8seated-dumbbell-calf-raises.jpg" alt="Image of a seated dumbbell calf raises exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Footer -->
