--- a/calisthenics.html
+++ b/calisthenics.html
@@ -81,9 +81,8 @@
         </ol>
         <p><strong>Notes:</strong> <i>Take your time and have a tempo with your push-ups.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/9push-ups.jpg" alt="Image of a push-up exercise">
-    </div>
+    <img src="./images/9push-ups.jpg" alt="Image of a push-up exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Supermans -->
@@ -99,9 +98,9 @@
         <p><strong>Notes:</strong> <i>Try not bend your knees when lifting your legs off the floor. Keep your head in a
                 neutral position.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/10supermans.jpg" alt="Image of superman exercise">
-    </div>
+    <img src="./images/10supermans.jpg" alt="Image of superman exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+
     <br>
 
     <!-- Pike Push-Ups -->
@@ -119,9 +118,8 @@
         <p><strong>Notes:</strong> <i>Keeping your legs and back straight will make you get the most out of this
                 exercise.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/11pike-push-ups.jpg" alt="Image of a dumbbell lateral raises exercise">
-    </div>
+    <img src="./images/11pike-push-ups.jpg" alt="Image of a dumbbell lateral raises exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Pseudo Planche Push-Ups -->
@@ -139,9 +137,8 @@
         <p><strong>Notes:</strong> <i>It's best to have a mat to grip and prevent yourself from hitting the floor
                 hard.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/12pseudo-planche-push-up.jpg" alt="Image of a pseudo planche push-ups exercise">
-    </div>
+    <img src="./images/12pseudo-planche-push-up.jpg" alt="Image of a pseudo planche push-ups exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Lower Body Calisthenics -->
@@ -196,9 +193,8 @@
         </ol>
         <p><strong>Notes:</strong> <i>Take your time with each squat and try not to rush through all your reps.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/13squats.jpg" alt="Image of a squat exercise">
-    </div>
+    <img src="./images/13squats.jpg" alt="Image of a squat exercise"
+        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Single Leg Glute Bridge -->
@@ -216,9 +212,8 @@
         <p><strong>Notes:</strong> <i>Focus on keeping your other leg straight and move your hips slowly when doing this
                 exercise.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/14single-leg-glute-bridge.jpg" alt="Image of a single leg glute bridge exercise">
-    </div>
+        <img src="./images/14single-leg-glute-bridge.jpg" alt="Image of a single leg glute bridge exercise"
+            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Nordic Hamstring Curl -->
@@ -239,15 +234,15 @@
         </ol>
         <p><strong>Notes:</strong> <i>Use a mat or a pillow to lessen the pressure on your knees.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/15nordic-hamstring-curl.png" alt="Image of a nordic hamstring Curl">
-    </div>
+        <img src="./images/15nordic-hamstring-curl.png" alt="Image of a nordic hamstring Curl"
+            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Eleveated Calf Raises -->
     <div class="main">
         <h2>Elevated Calf Raises</h2>
-        <p>The last exercise that's on this list is the elevated calf raises. What's great about this exercise is that it
+        <p>The last exercise that's on this list is the elevated calf raises. What's great about this exercise is that
+            it
             could be done almost anywhere.</p>
         <ol class="list">
             <li>Have both feet stand on the edge of a elevated surface near the floor.</li>
@@ -255,11 +250,11 @@
             <li>Use your upper feet to push yourself up as if you are tiptoeing.</li>
             <li>Hold it for a second, then lower your heels back down to the ground.</li>
         </ol>
-        <p><strong>Notes:</strong> <i>Calf raises are also a great way to build stronger ankles and prevent injuries.</i></p>
+        <p><strong>Notes:</strong> <i>Calf raises are also a great way to build stronger ankles and prevent
+                injuries.</i></p>
     </div>
-    <div class="img">
-        <img src="./images/16elevated-calf-raises.jpg" alt="Image of a elevated calf raises">
-    </div>
+        <img src="./images/16elevated-calf-raises.jpg" alt="Image of a elevated calf raises"
+            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
     <br>
 
     <!-- Footer -->
