--- a/calisthenics.html
+++ b/calisthenics.html
@@ -12,9 +12,11 @@
 
 <body>
     <!-- Header -->
-    <div class="header">
-        <h1>Find your Fitness</h1>
-        <p style="font-size: 32px;"><strong>An Easy Guide for a Hard Workout</strong></p>
+    <div class="header-image">
+        <div class="header">
+            <h1>Find your Fitness</h1>
+            <p style="font-size: 32px;"><strong>An Easy Guide for a Hard Workout</strong></p>
+        </div>
     </div>
 
     <!-- Sticky Navbar -->
@@ -81,8 +83,7 @@
         </ol>
         <p><strong>Notes:</strong> <i>Take your time and have a tempo with your push-ups.</i></p>
     </div>
-    <img src="./images/9push-ups.jpg" alt="Image of a push-up exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/9push-ups.jpg" alt="Image of a push-up exercise">
     <br>
 
     <!-- Supermans -->
@@ -98,9 +99,7 @@
         <p><strong>Notes:</strong> <i>Try not bend your knees when lifting your legs off the floor. Keep your head in a
                 neutral position.</i></p>
     </div>
-    <img src="./images/10supermans.jpg" alt="Image of superman exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
-
+    <img id="pic" src="./images/10supermans.jpg" alt="Image of superman exercise">
     <br>
 
     <!-- Pike Push-Ups -->
@@ -118,8 +117,7 @@
         <p><strong>Notes:</strong> <i>Keeping your legs and back straight will make you get the most out of this
                 exercise.</i></p>
     </div>
-    <img src="./images/11pike-push-ups.jpg" alt="Image of a dumbbell lateral raises exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/11pike-push-ups.jpg" alt="Image of a dumbbell lateral raises exercise">
     <br>
 
     <!-- Pseudo Planche Push-Ups -->
@@ -137,8 +135,7 @@
         <p><strong>Notes:</strong> <i>It's best to have a mat to grip and prevent yourself from hitting the floor
                 hard.</i></p>
     </div>
-    <img src="./images/12pseudo-planche-push-up.jpg" alt="Image of a pseudo planche push-ups exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/12pseudo-planche-push-up.jpg" alt="Image of a pseudo planche push-ups exercise">
     <br>
 
     <!-- Lower Body Calisthenics -->
@@ -193,8 +190,7 @@
         </ol>
         <p><strong>Notes:</strong> <i>Take your time with each squat and try not to rush through all your reps.</i></p>
     </div>
-    <img src="./images/13squats.jpg" alt="Image of a squat exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/13squats.jpg" alt="Image of a squat exercise">
     <br>
 
     <!-- Single Leg Glute Bridge -->
@@ -212,8 +208,7 @@
         <p><strong>Notes:</strong> <i>Focus on keeping your other leg straight and move your hips slowly when doing this
                 exercise.</i></p>
     </div>
-        <img src="./images/14single-leg-glute-bridge.jpg" alt="Image of a single leg glute bridge exercise"
-            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/14single-leg-glute-bridge.jpg" alt="Image of a single leg glute bridge exercise">
     <br>
 
     <!-- Nordic Hamstring Curl -->
@@ -234,8 +229,7 @@
         </ol>
         <p><strong>Notes:</strong> <i>Use a mat or a pillow to lessen the pressure on your knees.</i></p>
     </div>
-        <img src="./images/15nordic-hamstring-curl.png" alt="Image of a nordic hamstring Curl"
-            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/15nordic-hamstring-curl.png" alt="Image of a nordic hamstring Curl">
     <br>
 
     <!-- Eleveated Calf Raises -->
@@ -253,14 +247,13 @@
         <p><strong>Notes:</strong> <i>Calf raises are also a great way to build stronger ankles and prevent
                 injuries.</i></p>
     </div>
-        <img src="./images/16elevated-calf-raises.jpg" alt="Image of a elevated calf raises"
-            style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/16elevated-calf-raises.jpg" alt="Image of a elevated calf raises">
     <br>
 
     <!-- Footer -->
     <div class="footer" style="margin-top: 10%; padding: 12px;">
         <address>Created by <a href="mailto:glenn.catalla@my.marianas.edu"
-                style="text-decoration: none; color: black;">Glenn Catalla</a>. |
+                style="text-decoration: none; color: royalblue;">Glenn Catalla</a>. |
             <a href="index.html" target="_self" style="text-decoration: none; color: black;">Home</a> |
             <a href="info.html" target="_self" style="text-decoration: none; color: black;">Info</a> |
             <a href="weights.html" target="_self" style="text-decoration: none; color: black;">Weight Training</a> |
