--- a/contacts.html
+++ b/contacts.html
@@ -12,9 +12,11 @@
 
 <body>
     <!-- Header -->
-    <div class="header">
-        <h1>Find your Fitness</h1>
-        <p style="font-size: 32px;"><strong>An Easy Guide for a Hard Workout</strong></p>
+    <div class="header-image">
+        <div class="header">
+            <h1>Find your Fitness</h1>
+            <p><strong>An Easy Guide for a Hard Workout</strong></p>
+        </div>
     </div>
 
     <!-- Sticky Navbar -->
@@ -33,7 +35,7 @@
 
     <!-- Contact Form -->
     <div class="container">
-        <form action="">
+        <form target="_blank" action="" method="POST">
             <label for="name"></label>
             <input type="text" id="name" name="nameInput" placeholder="Name">
 
@@ -47,9 +49,10 @@
         </form>
     </div>
 
+    <!-- Footer -->
     <div class="footer" style="margin-top: 10%; padding: 12px;">
         <address>Created by <a href="mailto:glenn.catalla@my.marianas.edu"
-                style="text-decoration: none; color: black;">Glenn Catalla</a>. |
+                style="text-decoration: none; color: royalblue;">Glenn Catalla</a>. |
             <a href="index.html" target="_self" style="text-decoration: none; color: black;">Home</a> |
             <a href="info.html" target="_self" style="text-decoration: none; color: black;">Info</a> |
             <a href="weights.html" target="_self" style="text-decoration: none; color: black;">Weight Training</a> |
