--- a/weights.html
+++ b/weights.html
@@ -12,9 +12,11 @@
 
 <body>
     <!-- Header -->
-    <div class="header">
-        <h1>Find your Fitness</h1>
-        <p style="font-size: 32px;"><strong>An Easy Guide for a Hard Workout</strong></p>
+    <div class="header-image">
+        <div class="header">
+            <h1>Find your Fitness</h1>
+            <p style="font-size: 32px;"><strong>An Easy Guide for a Hard Workout</strong></p>
+        </div>
     </div>
 
     <!-- Sticky Navbar -->
@@ -84,8 +86,7 @@
                 easy, then
                 add a few weights for difficulty.</i></p>
     </div>
-    <img src="./images/1bench-press.jpg" alt="Image of a bench press exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/1bench-press.jpg" alt="Image of a bench press exercise">
     <br>
 
     <!-- Bent-Over Rows -->
@@ -103,8 +104,7 @@
                 pulling the barbell.</i></p>
 
     </div>
-    <img src="./images/2bent-over-rows.jpg" alt="Image of bent-over rows exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/2bent-over-rows.jpg" alt="Image of bent-over rows exercise">
     <br>
 
     <!-- Dumbbell Lateral Raises -->
@@ -121,8 +121,7 @@
         <p><strong>Notes:</strong> <i>Refrain your body from bobbing up and down to make the exercise easier. You want
                 your shoulders to be doing the work, not the knees.</i></p>
     </div>
-    <img src="./images/3dumbbell-lateral-raises.png" alt="Image of a dumbbell lateral raise exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/3dumbbell-lateral-raises.png" alt="Image of a dumbbell lateral raise exercise">
     <br>
 
     <!-- Dumbbell Curls -->
@@ -138,8 +137,7 @@
         </ol>
         <p><strong>Notes:</strong> <i>Don't lock your arms when bringing the dumbbells back down by your side.</i></p>
     </div>
-    <img src="./images/4dumbbell-curls.jpg" alt="Image of a dumbell curls exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/4dumbbell-curls.jpg" alt="Image of a dumbell curls exercise">
     <br>
 
     <!-- Lower Body Weights -->
@@ -197,8 +195,7 @@
         <p><strong>Notes:</strong> <i>Keeping your back straight is very important, as you don't want your lower back to
                 be doing all the lifting.</i></p>
     </div>
-    <img src="./images/5deadlifts.jpg" alt="Image of a deadlift exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/5deadlifts.jpg" alt="Image of a deadlift exercise">
     <br>
 
     <!-- Barbell Hip Thrusts -->
@@ -216,8 +213,7 @@
         <p><strong>Notes:</strong> <i>Your shoulder blades should be resting on the bench and not your whole back.</i>
         </p>
     </div>
-    <img src="./images/6barbell-hip-thrusts.jpg" alt="Image of a barbell hip thrust exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/6barbell-hip-thrusts.jpg" alt="Image of a barbell hip thrust exercise">
     <br>
 
     <!-- Bulgarian Split Squats -->
@@ -235,8 +231,7 @@
         <p><strong>Notes:</strong> <i>Rely the leg that's planted on the floor to do all the pushing and use your foot
                 on the bench only for balance.</i></p>
     </div>
-    <img src="./images/7bulgarian-split-squats.jpg" alt="Image of a bulgarian split squat exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/7bulgarian-split-squats.jpg" alt="Image of a bulgarian split squat exercise">
     <br>
 
     <!-- Seated Dumbbell Calf Raises -->
@@ -256,14 +251,13 @@
         <p><strong>Notes:</strong> <i>You want to extend your foot as much as possible to get the most for your
                 calves.</i></p>
     </div>
-    <img src="./images/8seated-dumbbell-calf-raises.jpg" alt="Image of a seated dumbbell calf raises exercise"
-        style="width: 800px; border-radius: 8px; box-shadow: 0 8px 16px 0 rgba(130, 128, 129, 1), 0 12px 40px 0 rgba(130, 128, 129, 1); display: block; margin-left: auto; margin-right: auto;">
+    <img id="pic" src="./images/8seated-dumbbell-calf-raises.jpg" alt="Image of a seated dumbbell calf raises exercise">
     <br>
 
     <!-- Footer -->
     <div class="footer" style="margin-top: 10%; padding: 12px;">
         <address>Created by <a href="mailto:glenn.catalla@my.marianas.edu"
-                style="text-decoration: none; color: black;">Glenn Catalla</a>. |
+                style="text-decoration: none; color: royalblue;">Glenn Catalla</a>. |
             <a href="index.html" target="_self" style="text-decoration: none; color: black;">Home</a> |
             <a href="info.html" target="_self" style="text-decoration: none; color: black;">Info</a> |
             <a href="weights.html" target="_self" style="text-decoration: none; color: black;">Weight Training</a> |
