--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 <body>
     <!-- Header -->
-    <div class="header">
-        <h1>Find your Fitness</h1>
-        <p><strong>An Easy Guide for a Hard Workout</strong></p>
+    <div class="header-image">
+        <div class="header">
+            <h1>Find your Fitness</h1>
+            <p><strong>An Easy Guide for a Hard Workout</strong></p>
+        </div>
     </div>
 
     <!-- Sticky Navbar -->
@@ -47,7 +49,7 @@
                 <a id="button" href="weights.html"><strong>Get Started</strong></a>
             </div>
             <div class="column-side">
-                <img src="./images/index1.jpg" alt="Image of weight training" width="360" height="480">
+                <img id="pic" src="./images/index1.jpg" alt="Image of weight training" width="360" height="480">
             </div>
         </div>
     </div>
@@ -56,7 +58,7 @@
     <div class="container">
         <div class="row">
             <div class="column-side">
-                <img src="./images/index2.jpg" alt="Image of calisthenics" width="360" height="480">
+                <img id="pic" src="./images/index2.jpg" alt="Image of calisthenics" width="360" height="480">
             </div>
             <div class="column-main">
                 <h1 class="section">Calisthenics</h1>
@@ -68,16 +70,26 @@
         </div>
     </div>
 
+    <!-- Embedded Video -->
+    <div class="video">
+        <h1>Why Should We Exercise?</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7TrcgDRcrBw" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
+    <br>
+
     <!-- Footer -->
-    <div class="footer">
+    <div class="footer" style="margin-top: 10%; padding: 12px;">
         <address>Created by <a href="mailto:glenn.catalla@my.marianas.edu"
-                style="text-decoration: none; color: black;">Glenn Catalla</a>. |
+                style="text-decoration: none; color: royalblue;">Glenn Catalla</a>. |
             <a href="index.html" target="_self" style="text-decoration: none; color: black;">Home</a> |
             <a href="info.html" target="_self" style="text-decoration: none; color: black;">Info</a> |
             <a href="weights.html" target="_self" style="text-decoration: none; color: black;">Weight Training</a> |
             <a href="calisthenics.html" target="_self" style="text-decoration: none; color: black;">Calisthenics</a> |
             <a href="contacts.html" target="_self" style="text-decoration: none; color: black;">Contacts</a>
-            <p>Find your Fitness is Powered by 000webhost</p>
+            <p style="font-size: 12px;">Find your Fitness is Powered by 000webhost</p>
         </address>
 </body>
 
