--- a/info.html
+++ b/info.html
@@ -12,9 +12,11 @@
 
 <body>
   <!-- Header -->
-  <div class="header">
-    <h1>Find your Fitness</h1>
-    <p><strong>An Easy Guide for a Hard Workout</strong></p>
+  <div class="header-image">
+    <div class="header">
+      <h1>Find your Fitness</h1>
+      <p><strong>An Easy Guide for a Hard Workout</strong></p>
+    </div>
   </div>
 
   <!-- Sticky Navbar -->
@@ -82,15 +84,15 @@
   </div>
 
   <!-- Footer -->
-  <div class="footer">
+  <div class="footer" style="margin-top: 10%; padding: 12px;">
     <address>Created by <a href="mailto:glenn.catalla@my.marianas.edu"
-        style="text-decoration: none; color: black;">Glenn Catalla</a>. |
+        style="text-decoration: none; color: royalblue;">Glenn Catalla</a>. |
       <a href="index.html" target="_self" style="text-decoration: none; color: black;">Home</a> |
       <a href="info.html" target="_self" style="text-decoration: none; color: black;">Info</a> |
       <a href="weights.html" target="_self" style="text-decoration: none; color: black;">Weight Training</a> |
       <a href="calisthenics.html" target="_self" style="text-decoration: none; color: black;">Calisthenics</a> |
       <a href="contacts.html" target="_self" style="text-decoration: none; color: black;">Contacts</a>
-      <p>Find your Fitness is Powered by 000webhost</p>
+      <p style="font-size: 12px;">Find your Fitness is Powered by 000webhost</p>
     </address>
 </body>
 
